--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,27 @@
 [submodule "pack/dist/opt/vim-snippets"]
-	path = pack/vim-snippets/opt/vim-snippets
+	path = pack/dist/opt/vim-snippets
 	url = https://github.com/honza/vim-snippets.git
 [submodule "pack/dist/opt/ultisnips"]
-	path = pack/ultisnips/opt/ultisnips
+	path = pack/dist/opt/ultisnips
 	url = https://github.com/SirVer/ultisnips.git
 [submodule "pack/vimtex/opt/vimtex"]
-	path = pack/vimtex/opt/vimtex
+	path = pack/dist/opt/vimtex
 	url = https://github.com/lervag/vimtex.git
 [submodule "pack/vimBookmarks"]
 	path = pack/vimBookmarks
 	url = git@github.com:Joe-C-Ding/vimBookmarks.git
 [submodule "pack/fugitive/opt/fugitive"]
-	path = pack/fugitive/opt/fugitive
+	path = pack/dist/opt/fugitive
 	url = git@github.com:tpope/vim-fugitive.git
+[submodule "pack/vader/opt/vader"]
+	path = pack/vader/opt/vader
+	url = git@github.com:junegunn/vader.vim.git
+[submodule "pack/dist/start/fencview"]
+	path = pack/dist/start/fencview
+	url = git@github.com:mbbill/fencview.git
+[submodule "pack/dist/opt/tellenc"]
+	path = pack/dist/opt/tellenc
+	url = git@github.com:adah1972/tellenc.git
+[submodule "pack/dist/start/solarized"]
+	path = pack/dist/start/solarized
+	url = git@github.com:altercation/vim-colors-solarized.git
